--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.2.6",
-    "dart-sass": "^1.25.0",
+    "fibers": "^5.0.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "postcss-loader": "^6.1.0",
     "pug": "^3.0.1",
     "pug-html-loader": "^1.1.5",
     "sass": "^1.35.0",
     "sass-loader": "^12.1.0",
+    "sass-resources-loader": "^2.2.1",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2"
   }
